# slander

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_debug.yml  build_release.yml
include/slander/: slander.hpp  strategy.hpp
src/: main.cpp  strategy.cpp
test/: remove_process_strategy.cpp  strategy.cpp
test_data/: test.sv
